# discord-reaction-spam

./: Cargo.toml  README.md
src/: main.rs
