[package]
name = "discord-reaction-spam"
version = "0.1.1"
authors = ["cherryblossom <cherryblossom0001234@gmail.com>"]
edition = "2021"
license = "MIT"
description = "React to the most recent messages in a Discord channel"

[dependencies]
clap = { version = "^3.0.5", features = ["cargo", "derive", "env", "wrap_help"] }
serde = { version = "^1.0.133", features = ["derive"] }
ureq = { version = "^2.4.0", features = ["json"] }
